fix for ui filter issue

--- a/app/views/dashboard/_filters.html.erb
+++ b/app/views/dashboard/_filters.html.erb
@@ -11,7 +11,7 @@ border-right:1px solid #ebebe0;
     font-weight: bold; height: 25px">
   	Location ( City )
   </div>
-	<div id="filter_cities" class="ui list" style="margin: 2% 0 0 0;height: 45%;overflow: auto;">
+	<div id="filter_cities" class="ui list" style="margin: 2% 0 0 0;height: 250px;overflow: auto;">
 	</div>
 	<div class="ui divider" style="margin: 2% 0 2% 0;"></div>
 	<div style=" font-size: 16px;
@@ -20,7 +20,7 @@ border-right:1px solid #ebebe0;
     font-weight: bold; height: 25px">
   	Department/Position
   </div>
-	<div id="filter_department" class="ui list" style="margin: 2% 0 0 0;height: 45%;overflow: auto;">
+	<div id="filter_department" class="ui list" style="margin: 2% 0 0 0;height: 250px;overflow: auto;">
 	</div>
 </div>
 
