--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,35 +1,6 @@
 <div class="main-content container" style="padding-top:5%;height: 87%">
   <div class="pusher" style="height: 100%">
     <div class="ui grid" style="height: 100%">
-      <script type="text/javascript">
-      // CampusConnect.Utilities.cards();
-      </script>
-      <div class="ui vertical inverted sidebar menu left overlay">
-        <div class="profile_pic">
-          <img src="/images/Thapar_Uni_logo.jpg" class="img-circle profile_img">
-          <span style="color:#fff">Thapar University</span>
-        </div>
-        <h4 class="ui horizontal divider header inverted">
-        <i class="tag icon left"></i>
-        Navigation
-        </h4>
-        <a class="item">
-          <i class="home icon"></i>
-          Home
-        </a>
-        <a class="item">
-          <i class="block layout icon"></i>
-          Topics
-        </a>
-        <a class="item">
-          <i class="smile icon"></i>
-          Friends
-        </a>
-        <a class="item">
-          <i class="calendar icon"></i>
-          History
-        </a>
-      </div>
       <div class="four wide column verticalLine">
         <%= render partial: "filters"%>
       </div>
@@ -38,11 +9,11 @@
         <div class="ui grid">
           <div class="three column row">
             <div class="right floated column">
-              <div  class="sort-options " style="padding-left: 12%;">
+              <div  class="sort-options" style="padding-left: 12%;">
                 <select class="sort ui dropdown" >
                   <option value="">Sort by</option>
+                  <option value="">Default</option>
                   <option value="no_of_openings">No of openings</option>
-                  <option value="rating">Rating</option>
                   <option value="package_upper">Package</option>
                 </select>
               </div>
@@ -71,7 +42,7 @@ $('.sort.ui.dropdown').dropdown({
 CampusConnect.Dashboard.cards();
 
 $(".prompt.search-bar").keydown(function(event){
-    if (event.keyCode == 13) {
+    if (event.keyCode == 13) {      
         var query = $(this).val();
         CampusConnect.Dashboard.search_openings(query);
     }
