connection Dashboard interest sent

--- a/app/views/connections_dashboard/_cards_handlebar.html.erb
+++ b/app/views/connections_dashboard/_cards_handlebar.html.erb
@@ -26,7 +26,7 @@
     </div>
     <div class="extra content">
       <a><i class="users icon"></i>{{company.no_of_employees}} + Members</a>    
-      <label class="ui right floated">Sent Date: 10/11/2017</label>
+      <label class="ui right floated">Sent Date: {{last_updated}}</label>
     </div>
   </div>
 
