--- a/app/views/connections_dashboard/index.html.erb
+++ b/app/views/connections_dashboard/index.html.erb
@@ -21,11 +21,29 @@
     <div class="nine wide column" style="display:block" id="cards-container">
         Invitation >> Sent
         <div class="ui  divider"></div>
-        <div id="invitation-sent" style="width:100%">
-      </div>
+        <div id="invitations" style="width:100%">
+           <div class="ui pointing secondary menu">
+              <a class="active item" data-tab="accepted" onclick="CampusConnect.ConnectionDashboard.cards('accepted');">Accepted</a>
+              <a class="item" data-tab="pending"  onclick="CampusConnect.ConnectionDashboard.cards('pending');">Pending</a>
+              <a class="item" data-tab="rejected"  onclick="CampusConnect.ConnectionDashboard.cards('rejected');">Rejected</a>
+            </div>
+            <div class="ui active tab segment" data-tab="accepted">              
+              <div id="invitation-accepted" style="width:100%">
+              </div>
+            </div>
+            <div class="ui  tab segment" data-tab="pending">
+              <div id="invitation-pending" style="width:100%">
+              </div>
+            </div>
+            <div class="ui tab segment" data-tab="rejected">
+              <div id="invitation-rejected" style="width:100%">
+              </div>
+            </div>
+        </div>
     </div>
   </div>
 </div>
 <script type="text/javascript">
-CampusConnect.ConnectionDashboard.cards();
+ CampusConnect.ConnectionDashboard.cards('accepted');
+$('.menu .item').tab();
 </script>
