--- a/app/views/user_help/_right_nav.html.erb
+++ b/app/views/user_help/_right_nav.html.erb
@@ -10,13 +10,13 @@
       </a>
     </div>
     <div class="right menu">
-      <div class="ui search" style="padding-top:15px;padding-right:50px;">
+      <!-- <div class="ui search" style="padding-top:15px;padding-right:50px;">
         <div class="ui icon input">
           <input class="prompt search-bar" type="text" placeholder="Search here..." style="width:565px;">
           <i class="search icon"></i>
         </div>
         <div class="results"></div>
-      </div>
+      </div> -->
       <a href="/campus_drives/index" class="item">Create Drive</a>
       <div class="ui right dropdown mini item">
         <label href="#" class="item"><%=current_user.firstname%></label>
