--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -7,13 +7,13 @@
   <i class="tag icon left"></i>
   Navigation
   </h4>
-  <a class="item">
+  <a class="item" href="/user_root">
     <i class="home icon"></i>
-    Home
+    Dashboard
   </a>
-  <a class="item">
+  <a class="item" href="/connections">
     <i class="block layout icon"></i>
-    Topics
+    Connections
   </a>
   <a class="item">
     <i class="smile icon"></i>
