--- a/app/views/campus_drives/_right_nav.html.erb
+++ b/app/views/campus_drives/_right_nav.html.erb
@@ -17,7 +17,7 @@
         <div class="menu">
           <div class="item">Profile <i class="user icon" style="float:right"></i></div>
           <div class="item">Settings <i class="settings icon" style="float:right"></i></div>
-          <div class="item" >Help <i class="help icon" style="float:right"></i></div>
+          <div class="item" ><a href="/user_help"> Help</a><i class="help icon" style="float:right"></i></div>
           <div class="item">
             <a href="#" onclick="CampusConnect.Utilities.signOut('<%=form_authenticity_token%>')">Sign Out</a>
             <i class="sign out icon" style="float:right"></i>
