--- a/app/views/dashboard/_right_nav.html.erb
+++ b/app/views/dashboard/_right_nav.html.erb
@@ -22,11 +22,12 @@
         <label href="#" class="item"><%=current_user.firstname%></label>
         <i class="dropdown icon"></i>
         <div class="menu">
-          <div class="item" style="margin-left:10px">Profile</div>
-          <div class="item" style="margin-left:10px" >Settings</div>
-          <div class="item" style="margin-left:10px" ><a href="/user_help"> Help</a></div>
-          <div class="item" style="margin-left:10px">
+          <div class="item">Profile <i class="user icon" style="float:right"></i></div>
+          <div class="item">Settings <i class="settings icon" style="float:right"></i></div>
+          <div class="item" ><a href="/user_help"> Help</a><i class="help icon" style="float:right"></i></div>
+          <div class="item">
             <a href="#" onclick="CampusConnect.Utilities.signOut('<%=form_authenticity_token%>')">Sign Out</a>
+            <i class="sign out icon" style="float:right"></i>
           </div>
         </div>
       </div>
