--- a/app/views/connections_dashboard/_right_nav.html.erb
+++ b/app/views/connections_dashboard/_right_nav.html.erb
@@ -9,24 +9,18 @@
         <h3>CampusConnect</h3>
       </a>
     </div>
-    <div class="right menu">
-      <!-- <div class="ui search" style="padding-top:15px;padding-right:50px;">
-        <div class="ui icon input">
-          <input class="prompt search-bar" type="text" placeholder="Search here..." style="width:565px;">
-          <i class="search icon"></i>
-        </div>
-        <div class="results"></div>
-      </div> -->
+    <div class="right menu">      
       <a href="/campus_drives/index" class="item">Create Drive</a>
       <div class="ui right dropdown mini item">
         <label href="#" class="item"><%=current_user.firstname%></label>
         <i class="dropdown icon"></i>
         <div class="menu">
-          <div class="item" style="margin-left:10px">Profile</div>
-          <div class="item" style="margin-left:10px" >Settings</div>
-          <div class="item" style="margin-left:10px" >Help</div>
-          <div class="item" style="margin-left:10px">
+          <div class="item">Profile <i class="user icon" style="float:right"></i></div>
+          <div class="item">Settings <i class="settings icon" style="float:right"></i></div>
+          <div class="item" ><a href="/user_help"> Help</a><i class="help icon" style="float:right"></i></div>
+          <div class="item">
             <a href="#" onclick="CampusConnect.Utilities.signOut('<%=form_authenticity_token%>')">Sign Out</a>
+            <i class="sign out icon" style="float:right"></i>
           </div>
         </div>
       </div>
