--- a/app/views/user_help/index.html.erb
+++ b/app/views/user_help/index.html.erb
@@ -33,8 +33,8 @@
 	<div class="three wide column"></div>
 	<div class="eight wide column">
 		<h3>We are available on </h3>
-		<p>Contact Number: 1234567890 <br/>
-			Email: support@example.com</p>
+		<p style="font-size:15px"><b>Contact Number</b>:  1234567890 <br/>
+			<b>Email</b>:    support@example.com</p>
 	</div>
 	<div class="five wide column"></div>
 
