user help layout changes

--- a/app/views/layouts/user_help.html.erb
+++ b/app/views/layouts/user_help.html.erb
@@ -9,7 +9,7 @@
 
     <body>
   
-       
+        <%= javascript_include_tag 'campus_connect/utilities.js' %>       
         <%= javascript_include_tag 'application.js' %>
         <%= render 'layouts/header' %>
        
