--- a/app/views/layouts/user_help.html.erb
+++ b/app/views/layouts/user_help.html.erb
@@ -10,6 +10,7 @@
     <body>
   
         <%= javascript_include_tag 'campus_connect/utilities.js' %>       
+        <%= javascript_include_tag "campus_connect/college/validation.js" %>        
         <%= javascript_include_tag 'application.js' %>
         <%= render 'layouts/header' %>
        
