--- a/app/views/profile_management/_campus_info_table.html.erb
+++ b/app/views/profile_management/_campus_info_table.html.erb
@@ -1,5 +1,5 @@
   <%= form_tag({controller: "profile_management",:action=>"edit"},method: "post", :class=>"ui large form campus_info") do %>
-<table class="ui single line table" id="company_info_table">
+<table class="ui single line table" id="campus_info_table">
   <thead>
     <tr>
       <th colspan="3">
@@ -10,7 +10,7 @@
     </h2>
       </th>
       <th>
-        <div id="edit_company_info">
+        <div id="edit_campus_info">
         <a  style="cursor:pointer;float:right;padding-right:10px;"><i title="edit" class="edit icon" style="font-size:x-large;"></i></a>
         </div>
       </th>
@@ -85,10 +85,10 @@
    <tfoot class="full-width" style="display:none">
     <tr>      
       <th colspan="4">
-      	<button  onclick="" class="ui right floated primary button" id="save_company_info">
+      	<button  onclick="" class="ui right floated primary button" id="save_campus_info">
           Save
         </button>
-      	<div class="ui right floated green button" id="cancel_edit_company_info">
+      	<div class="ui right floated green button" id="cancel_edit_campus_info">
           Cancel
         </div>        
         
@@ -99,26 +99,27 @@
   <div class="ui error message"></div>
 <%end%>
 <script type="text/javascript">
-  $('#edit_company_info').click(function(){
-    $('#edit_company_info').hide();
-    $('#company_info_table label').each(function(){
+  $('#edit_campus_info').click(function(){
+    $('#edit_campus_info').hide();
+    $('#campus_info_table label').each(function(){
         $(this).hide();     
     });  
-    $('#company_info_table .ui.input').each(function(){
+    $('#campus_info_table .ui.input').each(function(){
         $(this).show();     
     });  
-      $("#company_info_table tfoot").show() // enabling save button
+      $("#campus_info_table tfoot").show() // enabling save button
   });
 
-  $('#cancel_edit_company_info').click(function(){    
-      $("#company_info_table tfoot").hide() // disabling save button
-    $('#company_info_table label').each(function(){
+  $('#cancel_edit_campus_info').click(function(){    
+      $("#campus_info_table tfoot").hide() // disabling save button
+      $(".ui.error.message").html('');
+    $('#campus_info_table label').each(function(){
         $(this).show();     
     });  
-      $('#company_info_table .ui.input').each(function(){
+      $('#campus_info_table .ui.input').each(function(){
         $(this).hide();
       });  
-    $('#edit_company_info').show();
+    $('#edit_campus_info').show();
   });
-  CampusConnect.College.Validation.companyInfo();
+  CampusConnect.College.Validation.campusInfo();
 </script>
