--- a/app/views/layouts/profile_management.html.erb
+++ b/app/views/layouts/profile_management.html.erb
@@ -8,6 +8,7 @@
         <%= csrf_meta_tags %>
         <%= javascript_include_tag 'campus_connect/utilities.js' %>       
         <%= javascript_include_tag "campus_connect/college/validation.js" %>        
+        <%= javascript_include_tag "campus_connect/college/profile_management.js" %>        
         <%= javascript_include_tag 'application.js' %>
     </head>
     <body>  
