--- a/app/views/profile_management/_right_nav.html.erb
+++ b/app/views/profile_management/_right_nav.html.erb
@@ -9,20 +9,13 @@
         <h3>CampusConnect</h3>
       </a>
     </div>
-    <div class="right menu">
-      <div class="ui search" style="padding-top:15px;padding-right:50px;">
-        <div class="ui icon input">
-          <input class="prompt search-bar" type="text" placeholder="Search here..." style="width:565px;">
-          <i class="search icon"></i>
-        </div>
-        <div class="results"></div>
-      </div>
+    <div class="right menu">      
       <a href="/campus_drives/index" class="item">Create Drive</a>
       <div class="ui right dropdown mini item">
         <label href="#" class="item"><%=current_user.firstname%></label>
         <i class="dropdown icon"></i>
         <div class="menu">
-          <div class="item"><a href="/profile">Profile</a> <i class="user icon" style="float:right"></i></div>
+          <div class="item"><a href="/profile"> Profile <i class="user icon" style="float:right"></i></a></div>
           <div class="item">Settings <i class="settings icon" style="float:right"></i></div>
           <div class="item" ><a href="/user_help"> Help</a><i class="help icon" style="float:right"></i></div>
           <div class="item">
