validation profile mgmt

--- a/app/views/profile_management/_campus_info_table.html.erb
+++ b/app/views/profile_management/_campus_info_table.html.erb
@@ -79,6 +79,9 @@
       	</td>
       	<td class="value">
       		<label>India</label>
+          <div class="ui disabled input" title="Country can't be edited" style="display:none">
+            <%= text_field_tag "country","India"%>          
+          </div>
       	</td>      
     </tr>
   </tbody>
