profile mgmt and validation

--- a/app/views/profile_management/index.html.erb
+++ b/app/views/profile_management/index.html.erb
@@ -12,5 +12,10 @@
 	<%= render :partial=>"campus_info_table"%>
 	<br/>
 	<br/>
-
+	<%= render :partial=>"campus_contact_info_table"%>
+	<br/>
+	<br/>
+	<br/>
+	
 </div>
+<%=render :partial=>"response_message"%>
