--- a/app/views/dashboard/_right_nav.html.erb
+++ b/app/views/dashboard/_right_nav.html.erb
@@ -22,7 +22,7 @@
         <label href="#" class="item"><%=current_user.firstname%></label>
         <i class="dropdown icon"></i>
         <div class="menu">
-          <div class="item"><a href="/profile">Profile</a> <i class="user icon" style="float:right"></i></div>
+          <div class="item"><a href="#">Profile</a> <i class="user icon" style="float:right"></i></div>
           <div class="item">Settings <i class="settings icon" style="float:right"></i></div>
           <div class="item" ><a href="/user_help"> Help</a><i class="help icon" style="float:right"></i></div>
           <div class="item">
