--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -15,9 +15,9 @@
     <i class="block layout icon"></i>
     Connections
   </a>
-  <a class="item">
+  <a class="item" href="/profile">
     <i class="smile icon"></i>
-    Friends
+    Campus Profile
   </a>
   <a class="item">
     <i class="calendar icon"></i>
