sidebar js issue

--- a/app/views/campus_drives/index.html.erb
+++ b/app/views/campus_drives/index.html.erb
@@ -2,6 +2,7 @@
 CampusConnect.Utilities.departments();
 </script>
 <!-- main content goes here -->
+<%= render :partial=>"sidebar" %>
 <div class="pusher">
   <div class="ui middle aligned center aligned grid">
     <div class="seven wide column">
