--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,5 +1,6 @@
-<div class="main-content container" style="padding-top:5%;height: 87%;overflow:auto" id="scrollItem">
-  <div class="pusher" style="height: 100%">
+<%= render :partial=>"sidebar" %>
+<div class="main-content container pusher" style="padding-top:5%;height: 87%;overflow:auto" id="scrollItem">
+  <div class="pusher1" style="height: 100%">
     <div class="ui grid" style="height: 100%">
       <div class="four wide column verticalLine">
         <%= render partial: "filters"%>
