--- a/app/views/profile_management/index.html.erb
+++ b/app/views/profile_management/index.html.erb
@@ -1,8 +1,6 @@
-<br/>
-<br/>
-<br/>
-
-<div class="ui center aligned container">  
+<%= render :partial=>"sidebar" %>
+<div class="pusher" style="padding-top:5%;">
+<div class="ui center aligned container pusher">  
 	<h2 class="ui header">
 		<img class="ui image" src="/images/icons/school.png">
 		<div class="content">
@@ -17,5 +15,6 @@
 	<br/>
 	<br/>
 	
+</div>
 </div>
 <%=render :partial=>"response_message"%>
