--- a/app/views/connections_dashboard/index.html.erb
+++ b/app/views/connections_dashboard/index.html.erb
@@ -1,3 +1,4 @@
+<%= render :partial=>"sidebar" %>
 <div class="pusher main-content" style="height: 100%">
   <div class="ui grid" style="margin-top:50px">
     <div  class="four wide column" style="margin-left:15px">
