js issue fix in connection dashboard

--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -25,6 +25,7 @@
             $(document).ready(function() {
                 CampusConnect.Utilities.init();
                 CampusConnect.Dashboard.init();
+                var cardsTemplate;
                 CampusConnect.ConnectionDashboard.init();
             });
         </script>
