--- a/app/views/users/profile_management/_social_connect.html.erb
+++ b/app/views/users/profile_management/_social_connect.html.erb
@@ -1,5 +1,5 @@
-  <%= form_tag({controller: "profile_management",:action=>"edit_contact_details"},method: "post", :class=>"ui large form campus_contact_info") do %>
-<table class="ui single line table" id="campus_contact_info_table">
+  <%= form_tag({controller: "profile_management",:action=>"edit_contact_details"},method: "post", :class=>"ui large form social_connect_form") do %>
+<table class="ui single line table" id="social_connect_table">
   <thead>
     <tr>
       <th colspan="3">
@@ -10,7 +10,7 @@
     </h2>
       </th>
       <th>
-        <div id="edit_campus_contact_info">
+        <div id="edit_social_connect">
         <a  style="cursor:pointer;float:right;padding-right:10px;"><i title="edit" class="edit icon" style="font-size:x-large;"></i></a>
         </div>
       </th>
@@ -54,15 +54,15 @@
    <tfoot class="full-width" style="display:none">
     <tr>      
       <th colspan="4">
-      	<button  class="ui right floated primary button" id="save_campus_contact_info">
+      	<button  class="ui right floated primary button" id="save_social_connect">
           Save
         </button>
-      	<div class="ui right floated green button" id="cancel_edit_campus_contact_info">
+      	<div class="ui right floated green button" id="cancel_edit_social_connect">
           Cancel
         </div>        
       </th>
     </tr>
   </tfoot>
 </table>
-<div class="ui error message campus_contact_info"></div>
+<div class="ui error message social_connect"></div>
 <%end%>
